--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -26,10 +26,18 @@
     <string name="profile">Profile</string>
     <string name="sign_out">Sign Out</string>
     <string name="night_mode">Night Mode</string>
-    <string name="your_profile">Your Profile</string>
     <string name="reset_password">Reset Password</string>
     <string name="click_on_the_button_to_reset_your_password_email_link_will_be_sent">Enter an email to reset your password. Check the link in the email.</string>
     <string name="back_to_login">Back to Login</string>
     <string name="forgot_password">Forgot password?</string>
     <string name="delete_account">Delete account</string>
+    <string name="your_profile">Your Profile</string>
+    <string name="search">Search...</string>
+    <string name="settings">Settings</string>
+    <string name="edit_profile">Edit Profile</string>
+    <string name="change_password">Change Password</string>
+    <string name="edit_profile_info">Edit Profile Info</string>
+    <string name="submit">Submit</string>
+    <string name="enter_new_password">Enter new password</string>
+    <string name="confirm_new_password">Confirm new password</string>
 </resources>
