--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,10 @@
     <string name="your_profile">Your Profile</string>
     <string name="search">Search...</string>
     <string name="settings">Settings</string>
+    <string name="edit_profile">Edit Profile</string>
+    <string name="change_password">Change Password</string>
+    <string name="edit_profile_info">Edit Profile Info</string>
+    <string name="submit">Submit</string>
+    <string name="enter_new_password">Enter new password</string>
+    <string name="confirm_new_password">Confirm new password</string>
 </resources>
