--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,5 @@
     <string name="enter_new_password">Enter new password</string>
     <string name="confirm_new_password">Confirm new password</string>
     <string name="delete_recipe">Delete Recipe</string>
+    <string name="show_to_everyone">Show to everyone:</string>
 </resources>
