--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,7 @@
     <string name="delete_recipe">Delete Recipe</string>
     <string name="show_to_everyone">Show to everyone:</string>
     <string name="favorite_recipes">Favorite Recipes</string>
+    <string name="what_should_we_improve">What should we improve?</string>
+    <string name="we_care_about_your_opinion">We care about your opinion!</string>
+    <string name="would_you_like_to_rate_our_app">Would you like to rate our app?</string>
 </resources>
