--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -61,6 +61,8 @@
     <string name="update">Update</string>
     <string name="new_update_available">New update available!</string>
     <string name="would_you_like_to_go_to_the_playstore_and_update_an_app">Would you like to go to the PlayStore and update an app?</string>
+    <string name="delete_image_dialog">Deleting image?</string>
+    <string name="delete_image_dialog_message">Are you sure you want to delete this image?</string>
 
     <!-- App Updater dialog strings-->
     <string name="android_app_upd_updater_info_install">The application has moved to a new address. Please install a newer version.</string>
