--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -74,5 +74,8 @@
     <string name="edit_recipe">Edit Recipe</string>
     <string name="edit">EDIT</string>
     <string name="messages">Messages</string>
+    <string name="user_profile">User Profile</string>
+    <string name="show_my_recipes">Show My Recipes</string>
+    <string name="show_user_recipes">Show User Recipes</string>
 
 </resources>
